// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RegisterCustomerSelection stories snapshot > AccountCreated story renders and matches snapshot 1`] = `
<div
  class="w-full max-w-2xl mx-auto p-6"
>
  <section
    aria-label="Account Created"
    class="flex items-start gap-4 rounded-ui border border-input p-4"
  >
    <div
      class="flex flex-1 flex-col gap-1"
    >
      <h6
        class="text-sm font-semibold text-foreground"
      >
        Account Created
      </h6>
      <p
        class="text-sm leading-5 text-muted-foreground"
      >
        We've created and verified your account using the information from your order. Next time you check out, just enter the code we send to log in - no password needed.
      </p>
    </div>
    <span
      class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-green-600 text-white [a&]:hover:bg-green-600/90 dark:bg-green-700 dark:text-white"
      data-slot="badge"
    >
      Verified
    </span>
  </section>
</div>
`;

exports[`RegisterCustomerSelection stories snapshot > Checked story renders and matches snapshot 1`] = `
<div
  class="w-full max-w-2xl mx-auto p-6"
>
  <div
    data-testid="register-customer-checkbox"
  >
    <label
      class="flex cursor-pointer items-start gap-2 border border-input p-4"
      for="create-account-checkbox"
    >
      <button
        aria-checked="true"
        aria-label="Save for Future Use"
        class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive size-4 rounded-ui border shadow-ui transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 mt-0.5 shrink-0"
        data-slot="checkbox"
        data-state="checked"
        data-testid="create-account-checkbox"
        id="create-account-checkbox"
        role="checkbox"
        type="button"
        value="on"
      >
        <span
          class="grid place-content-center text-current transition-none"
          data-slot="checkbox-indicator"
          data-state="checked"
          style="pointer-events: none;"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check size-3.5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </span>
      </button>
      <div
        class="flex flex-1 flex-col gap-1 text-sm"
      >
        <span
          class="font-medium leading-5 text-foreground"
        >
          Save for Future Use
        </span>
        <span
          class="leading-5 text-foreground"
        >
          Create an account for a faster checkout next time
        </span>
        <p
          class="mt-3 leading-5 text-foreground"
        >
          When you place your order, we create an account for you and save your payment information and other details for future purchases. During your next checkout, confirm your account using the code we'll send to you.
        </p>
      </div>
    </label>
  </div>
</div>
`;

exports[`RegisterCustomerSelection stories snapshot > Default story renders and matches snapshot 1`] = `
<div
  class="w-full max-w-2xl mx-auto p-6"
>
  <div
    data-testid="register-customer-checkbox"
  >
    <label
      class="flex cursor-pointer items-start gap-2 border border-input p-4"
      for="create-account-checkbox"
    >
      <button
        aria-checked="false"
        aria-label="Save for Future Use"
        class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive size-4 rounded-ui border shadow-ui transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 mt-0.5 shrink-0"
        data-slot="checkbox"
        data-state="unchecked"
        data-testid="create-account-checkbox"
        id="create-account-checkbox"
        role="checkbox"
        type="button"
        value="on"
      />
      <div
        class="flex flex-1 flex-col gap-1 text-sm"
      >
        <span
          class="font-medium leading-5 text-foreground"
        >
          Save for Future Use
        </span>
        <span
          class="leading-5 text-foreground"
        >
          Create an account for a faster checkout next time
        </span>
      </div>
    </label>
  </div>
</div>
`;

exports[`RegisterCustomerSelection stories snapshot > SendingVerificationCode story renders and matches snapshot 1`] = `
<div
  class="w-full max-w-2xl mx-auto p-6"
>
  <div
    data-testid="register-customer-checkbox"
  >
    <label
      class="flex cursor-pointer items-start gap-2 border border-input p-4"
      for="create-account-checkbox"
    >
      <button
        aria-checked="true"
        aria-label="Save for Future Use"
        class="peer border-input dark:bg-input/30 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground dark:data-[state=checked]:bg-primary data-[state=checked]:border-primary focus-visible:border-ring focus-visible:ring-ring aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive size-4 rounded-ui border shadow-ui transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 mt-0.5 shrink-0"
        data-disabled=""
        data-slot="checkbox"
        data-state="checked"
        data-testid="create-account-checkbox"
        disabled=""
        id="create-account-checkbox"
        role="checkbox"
        type="button"
        value="on"
      >
        <span
          class="grid place-content-center text-current transition-none"
          data-disabled=""
          data-slot="checkbox-indicator"
          data-state="checked"
          style="pointer-events: none;"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check size-3.5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </span>
      </button>
      <div
        class="flex flex-1 flex-col gap-1 text-sm"
      >
        <span
          class="font-medium leading-5 text-foreground"
        >
          Save for Future Use
        </span>
        <span
          class="leading-5 text-foreground"
        >
          Create an account for a faster checkout next time
        </span>
        <p
          class="text-muted-foreground"
        >
          Sending verification code...
        </p>
      </div>
    </label>
  </div>
</div>
`;
